# reference-implementations-afm

./: .gitignore  Ballerina.toml  Dependencies.toml  Dockerfile  README.md  RELEASING.md  agent.bal  interface_web_chat.bal  interface_web_ui.bal  main.bal  types.bal
ballerina-interpreter/: Dependencies.toml  agent.bal  interface_web_chat.bal  interface_webhook.bal  main.bal  parser.bal  skills.bal  types.bal
langchain-interpreter/: Dockerfile  README.md  pyproject.toml
langchain-interpreter/src/afm/: cli.py  providers.py
langchain-interpreter/src/afm/interfaces/: webhook.py
langchain-interpreter/src/afm/tools/: mcp.py
langchain-interpreter/src/afm_cli/: __init__.py  agent.py  cli.py  exceptions.py  models.py  providers.py  schema_validator.py  templates.py  variables.py
langchain-interpreter/src/afm_cli/interfaces/: __init__.py  base.py  console_chat.py  web_chat.py  webhook.py
langchain-interpreter/src/afm_cli/tools/: __init__.py  mcp.py
langchain-interpreter/src/langchain_interpreter/: __init__.py  agent.py  cli.py  exceptions.py  models.py  parser.py  templates.py  variables.py
langchain-interpreter/src/langchain_interpreter/interfaces/: __init__.py  base.py  console_chat.py  console_chat.tcss  web_chat.py  webhook.py
langchain-interpreter/src/langchain_interpreter/tools/: mcp.py
langchain-interpreter/tests/: test_agent.py  test_agent_tools.py  test_cli.py  test_console_chat.py  test_mcp.py  test_models.py  test_parser.py  test_providers.py  test_schema_validator.py  test_templates.py  test_variables.py  test_web_chat.py  test_webhook.py
(+69 files in other folders)
