[project]
name = "afm-cli"
version = "0.1.1"
description = "AFM (Agent-Flavored Markdown) interpreter using LangChain"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]
license = "Apache-2.0"
requires-python = ">=3.11"
urls = { Repository = "https://github.com/wso2/reference-implementations-afm" }
dependencies = [
    "langchain>=1.2.8",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.1",
    "jsonschema>=4.26.0",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "mcp>=1.26.0",
    "langchain-mcp-adapters>=0.2.1",
    "click>=8.0.0",
    "textual>=2.1.0",
]

[project.scripts]
afm = "afm_cli.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "textual-dev>=1.7.0",
    "ty>=0.0.15",
    "asgi-lifespan>=2.1.0",
]

[tool.uv]
constraint-dependencies = [
    "wheel>=0.46.0",
    "jaraco-context>=6.0.0",
]
